<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:stretchColumns="*"
    tools:context=".SecActivity" 
    >
 <TextView  
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:textSize="15sp"
	  	android:id="@+id/userName"
	  	android:layout_marginLeft="5sp"
	  />
 
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
           android:scrollbars="none"
    android:layout_weight="1">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:shrinkColumns="*"
            android:stretchColumns="*"
           >
              <TableRow
   
        
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        

           <TextView  
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:textSize="12sp"
	  	android:text="@string/colStart"
	  	android:layout_marginLeft="3sp"
	  	android:textStyle="bold"
	  	/>
             <TextView  
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:textSize="12sp"
	  	android:text="@string/colStop"
	  	android:layout_marginLeft="3sp"
	  	android:textStyle="bold"
	  	/>
               <TextView  
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:textSize="12sp"
	  	android:text="@string/colTotal"
	  	android:layout_marginLeft="3sp"
	  	android:textStyle="bold"
	  	/>
       
           
   </TableRow>   
        </TableLayout>
        
   </ScrollView>
					
<TableRow>
  <Button
						    android:id="@+id/btnBack"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:background="?android:attr/selectableItemBackground"
						    android:text="@string/btnBack" />
  <Button
						    android:id="@+id/btnClear"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:background="?android:attr/selectableItemBackground"
						    android:text="@string/btnClear" />
					
		</TableRow>	
</TableLayout>
